# Natural-Language-Processing

./: .gitignore  BagWords_and_tf_idf.ipynb  pyproject.toml  requeriments.txt
LangChain/: 01-Model_HuggingFace.ipynb  02-Prompts_Chains.ipynb  03-Documents_Embeddings.ipynb  Hello_LangChain.ipynb  Hello_OpenAI.ipynb  pyproject.toml
LangChain-MCP/: README.md  env.example  setup.py
LangChain-MCP/01-fundamentos-mcp/: README.md
LangChain-MCP/02-configuracion-entorno/: README.md  verificar_configuracion.py
LangChain-MCP/03-integracion-basica/: README.md  cliente_langchain.py  servidor_mcp_simple.py
LangChain-MCP/04-herramientas-avanzadas/: README.md
LangChain-MCP/05-aplicaciones-practicas/: README.md
LangChain-MCP/06-mejores-practicas/: README.md
LangChain-MCP/ejercicios/: README.md
LangChain/chroma_db/: chroma.sqlite3
LangChain/hashira/: config.yaml  conversation.py  utils.py
LangGraph/: langgraph.json
LangGraph/notebooks/: 01-notebook.ipynb  02.simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured_output.ipynb  08-prompting.ipynb
LangGraph/src/agents/: main.py  rag.py  simple.py
LangGraph/src/agents/support/: __init__.py  agent.py  example.py
LangGraph/src/agents/support/utils/: __init__.py  nodes.py  state.py  tools.py
Snowflake/: 01_Cortex.ipynb
TransferLearning/: Fine-Tune Llama 3.1 8B.ipynb  Ollama-Mistral.ipynb
