[project]
name = "natural-language-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.8.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]
[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.7",
]

# Remover la sección de setuptools o cambiarla a:
[tool.setuptools.packages.find]
where = ["LangGraph"]  # ← Cambiar a "LangGraph"
include = ["src*"]